--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "mobx-react": "^4.2.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
+  },
+  "babel": {
+    "presets": [ "latest", "react" ]
+  },
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server -w"
   }
 }
