--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   },
@@ -19,7 +22,13 @@
     "react-dom": "^15.6.1"
   },
   "babel": {
-    "presets": [ "latest", "react" ]
+    "presets": [
+      "stage-2",
+      "react"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
+    ]
   },
   "scripts": {
     "build": "webpack",
